# prune

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  preview.html
apps/api/: pyproject.toml
apps/api/src/prune_api/: main.py
apps/api/src/prune_api/engine/: runner.py
apps/api/src/prune_api/nodes/: base.py  mpesa.py
apps/api/src/prune_api/routers/: chat.py  health.py  webhooks.py
apps/web/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: icon.tsx  layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(app)/builder/: page.tsx
apps/web/app/(app)/dashboard/: page.tsx
apps/web/app/(app)/inbox/: page.tsx
apps/web/app/(editor)/: layout.tsx
apps/web/components/: app-sidebar.tsx  sidebar.tsx  topbar.tsx
apps/web/components/builder/: action-panel.tsx  ai-agent-panel.tsx  builder-editor.tsx  chip-icons.ts  chip-utils.ts  editor-canvas.tsx  editor-sidebar.tsx  editor-topbar.tsx  export-view.tsx  inline-editable-text-input.tsx  knowledge-source-picker.tsx  node-card.tsx  node-detail-panel.tsx  node-handle.tsx  node-picker-modal.tsx  panel-ui.tsx  prompt-editor.tsx
apps/web/components/templates/: chat-preview.tsx  integration-logo.tsx  template-card.tsx
apps/web/components/ui/: breadcrumb.tsx  button-group.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  sheet.tsx  sidebar.tsx  switch.tsx  textarea.tsx  tooltip.tsx
apps/web/lib/: editor-nodes.ts  templates.ts  tones.ts  tool-schemas.ts  types.ts
apps/web/styles/: globals.css
(+18 files in other folders)
