[project]
name = "prune-api"
version = "0.1.0"
description = "Prune AI workflow engine and Daraja/WhatsApp adapters"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "redis>=5.1.0",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.30.0",
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
